--- a/internship.html
+++ b/internship.html
@@ -41,12 +41,36 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://boards.greenhouse.io/sevenrooms/jobs/4115934002'>Job Application for Customer Success Intern at SevenRooms</a></h5> 
+<h5><a href='https://startupsesame.join.com/jobs/474556-event-analyst-intern'>Job @ Startup Sesame (Paris): Event Analyst Intern | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=owK89fwh&__jvst=Employee+Referral&__jvsd=svdfVgwD&__jvsc=Twitter&bid=ntmiqMwO'>Palo Alto Networks Careers - Intern - Prisma Access Software Engineer</a></h5> 
+<h5><a href='https://bcbsfl.referrals.selectminds.com/jobs/corporate-tax-internship-7172'>Corporate Tax Internship - Florida Blue Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://towerswatson.referrals.selectminds.com/jobs/research-assistant-intern-12064'>Research Assistant Intern - Willis Towers Watson Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://towerswatson.referrals.selectminds.com/jobs/intern-client-relationship-management-12063'>Intern - Client Relationship Management - Willis Towers Watson Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='http://linkengcomencareers.applytojob.com/apply/d1fJbpAlJC/Mechanical-Engineering-Summer-Internship-2020'>Mechanical Engineering Summer Internship 2020 - Link Engineering Company - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/cnfa.org/d595b50a-99c5-471b-ae29-2830067feb29'>Cultivating New Frontiers in Agriculture (CNFA) - Hinga Weze Program Internship</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/sevenrooms/jobs/4115934002'>Job Application for Customer Success Intern at SevenRooms</a></h5> 
+<p><span class="badge badge-light">New York, NY</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=owK89fwh&__jvst=Employee+Referral&__jvsd=svdfVgwD&__jvsc=Twitter&bid=ntmiqMwO'>Palo Alto Networks Careers - Intern - Prisma Access Software Engineer</a></h5> 
+<p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
 <h5><a href='https://tiaa.referrals.selectminds.com/jobs/internship-capital-markets-3010'>INTERNSHIP - Capital Markets - TIAA Careers</a></h5> 
@@ -209,7 +233,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://moveagain.join.com/jobs/472687-business-development-intern'>Job @ moveagain (Z?rich): Business Development Intern | JOIN</a></h5> 
+<h5><a href='https://moveagain.join.com/jobs/472687-business-development-intern'>Job @ moveagain (Z?rich): Business Development Intern | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -249,7 +273,7 @@
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698601388-full-time-brand-marketing-internship-open-now-for-fall-and-spring'>Bosch Group Full Time Brand Marketing Internship - Open Now for Fall and Spring | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698601388-full-time-brand-marketing-internship-open-now-for-fall-and-spring'>Bosch Group Full Time Brand Marketing Internship - Open Now for Fall and Spring | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -319,7 +343,7 @@
 <p><span class="badge badge-light">Madrid Madrid Madrid United States New York</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zalora.applytojob.com/apply/cvKPbK5HSu/Intern-Marketplace-Onboarding'>Intern - Marketplace On-boarding - ZALORA SEA - Career Page</a></h5> 
+<h5><a href='http://zalora.applytojob.com/apply/cvKPbK5HSu/Intern-Marketplace-Onboarding'>Intern - Marketplace On-boarding - ZALORA SEA - Career Page</a></h5> 
 <p><span class="badge badge-light">Singapore Malaysia Philippines Hong Kong Taiwan</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -351,7 +375,7 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Broadsign2/743999698579215-automation-developer-intern'>Broadsign Automation Developer Intern | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Broadsign2/743999698579215-automation-developer-intern'>Broadsign Automation Developer Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -367,7 +391,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698577831-2020-co-op-student-sales-intern-6-months-'>Bosch Group 2020 Co-op Student - Sales Intern (6 months) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698577831-2020-co-op-student-sales-intern-6-months-'>Bosch Group 2020 Co-op Student - Sales Intern (6 months) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -395,11 +419,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698576008-internship-controlling-en'>Bosch Group Internship Controlling EN | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698576008-internship-controlling-en'>Bosch Group Internship Controlling EN | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Mechelen, Belgium</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698576105-internship-controlling-nl'>Bosch Group Internship Controlling NL | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698576105-internship-controlling-nl'>Bosch Group Internship Controlling NL | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -424,30 +448,6 @@
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698575638-internship-quality-coordination-support-nl'>Bosch Group Internship Quality Coordination Support NL | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698575730-internship-quality-coordination-support-fr'>Bosch Group Internship Quality Coordination Support FR | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698576371-internship-assistant-concept-marketing-benelux-en'>Bosch Group Internship Assistant Concept Marketing BeNeLux EN | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698576444-internship-assistant-concept-marketing-benelux-fr'>Bosch Group Internship Assistant Concept Marketing BeNeLux FR | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698576509-internship-assistant-concept-marketing-benelux-nl'>Bosch Group Internship Assistant Concept Marketing BeNeLux NL | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698573643-internship-assistant-trade-marketing-channel-marketing-communication-en'>Bosch Group Internship Assistant Trade Marketing, Channel Marketing & Communication EN | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698574727-internship-assistant-trade-marketing-channel-marketing-communication-nl'>Bosch Group Internship Assistant Trade Marketing, Channel Marketing & Communication NL | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
